--- a/babla-vvip-tools-4in1.html
+++ b/babla-vvip-tools-4in1.html
@@ -24,7 +24,7 @@ body, html {
   padding: 14px 16px;
   margin: 5px 2px;
   font-size: 25px;
-  width: 19.54%;
+  width: 16%;
 }
 
 .tablink:hover {
@@ -46,6 +46,7 @@ body, html {
 #Contact {background-color: #750133;}
 #About {background-color: indigo;}
 #Aladin {background-color: black;}
+#Saikat {background-color: #752b00;}
 </style>
 </head>
 <body>
@@ -56,6 +57,8 @@ body, html {
 <button class="tablink" onclick="openPage('About', this, 'orange')">Batch (stack)</button>
 
 <button class="tablink" onclick="openPage('Aladin', this, 'darkcyan')">Single(retain px)</button>
+
+<button class="tablink" onclick="openPage('Saikat', this, 'black')">No Caption</button>
 
 <div id="Home" class="tabcontent">
   <h1>Vvip Image Creator Pro (single) ++</h1>
@@ -80,6 +83,11 @@ body, html {
 <div id="Aladin" class="tabcontent">
   <h1>Single img (Retain inputted image pixels)</h1>
 							<iframe src="https://saikat-0.github.io/Single-img-retain-old-pixels.html" title="single" style="width: 100%; height: 100vh; border: none;"></iframe>
+</div>
+
+<div id="Saikat" class="tabcontent">
+  <h1>Single img (no watermark/caption)</h1>
+							<iframe src="https://saikat-0.github.io/single-image-nowatermark.html" title="single" style="width: 100%; height: 100vh; border: none;"></iframe>
 </div>
 
 <script>
