--- a/img-stack.html
+++ b/img-stack.html
@@ -216,9 +216,11 @@
       }
 
       input[type="checkbox"] {
-        margin-right: 9px;
-        cursor: pointer;
-      }
+  display: inline-block; /* Ensures the checkbox is visible */
+  width: auto; /* Ensures default sizing */
+  margin-right: 9px;
+  cursor: pointer;
+}
     </style>
   </head>
   <body>
